fixed spacing for content blocks

--- a/static/css/sub-let.css
+++ b/static/css/sub-let.css
@@ -44,6 +44,12 @@
 }
 
 .content-block {
+	margin-top: 10px;
+	display: block;
+}
+
+.content-block + .content-block {
+	margin-top: 20px;
 	display: block;
 }
 
